tests/baselines/reference/privacyAccessorDeclFile(target=es2015).errors.txt
privacyAccessorDeclFile_GlobalFile.ts(6,9): error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
privacyAccessorDeclFile_GlobalFile.ts(9,9): error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
privacyAccessorDeclFile_GlobalFile.ts(12,9): error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
privacyAccessorDeclFile_GlobalFile.ts(15,9): error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
privacyAccessorDeclFile_GlobalFile.ts(57,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(60,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(63,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(66,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(84,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(87,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(90,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(93,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(111,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(114,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(117,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(120,17): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(138,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(141,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(144,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(147,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(209,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(212,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(231,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(234,17): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(254,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(257,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(260,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(263,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(281,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(284,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(287,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(290,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(308,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(311,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(314,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(317,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_GlobalFile.ts(335,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(338,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(341,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(344,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(406,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(409,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(428,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_GlobalFile.ts(431,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(9,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(12,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(15,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(18,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(36,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(39,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(42,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(45,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(63,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(66,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(69,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(72,9): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(90,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(93,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(96,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(99,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(161,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(164,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(183,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(186,9): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(211,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(214,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(217,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(220,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(238,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(241,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(244,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(247,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(265,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(268,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(271,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(274,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(292,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(295,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(298,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(301,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(363,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(366,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(385,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(388,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(414,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(417,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(420,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(423,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(441,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(444,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(447,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(450,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(468,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(471,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(474,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(477,13): error TS2322: Type 'null' is not assignable to type 'privateClass'.
privacyAccessorDeclFile_externalModule.ts(495,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(498,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(501,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(504,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(566,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(569,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(588,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.
privacyAccessorDeclFile_externalModule.ts(591,13): error TS2322: Type 'null' is not assignable to type 'publicClass'.


==== privacyAccessorDeclFile_externalModule.ts (60 errors) ====
    class privateClass {
    }
    
    export class publicClass {
    }
    
    export class publicClassWithWithPrivateGetAccessorTypes {
        static get myPublicStaticMethod(): privateClass { // Error
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        private static get myPrivateStaticMethod(): privateClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        get myPublicMethod(): privateClass { // Error
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        private get myPrivateMethod(): privateClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        static get myPublicStaticMethod1() { // Error
            return new privateClass();
        }
        private static get myPrivateStaticMethod1() {
            return new privateClass();
        }
        get myPublicMethod1() { // Error
            return new privateClass();
        }
        private get myPrivateMethod1() {
            return new privateClass();
        }
    }
    
    export class publicClassWithWithPublicGetAccessorTypes {
        static get myPublicStaticMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        private static get myPrivateStaticMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        get myPublicMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        private get myPrivateMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        static get myPublicStaticMethod1() {
            return new publicClass();
        }
        private static get myPrivateStaticMethod1() {
            return new publicClass();
        }
        get myPublicMethod1() {
            return new publicClass();
        }
        private get myPrivateMethod1() {
            return new publicClass();
        }
    }
    
    class privateClassWithWithPrivateGetAccessorTypes {
        static get myPublicStaticMethod(): privateClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        private static get myPrivateStaticMethod(): privateClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        get myPublicMethod(): privateClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        private get myPrivateMethod(): privateClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
        }
        static get myPublicStaticMethod1() {
            return new privateClass();
        }
        private static get myPrivateStaticMethod1() {
            return new privateClass();
        }
        get myPublicMethod1() {
            return new privateClass();
        }
        private get myPrivateMethod1() {
            return new privateClass();
        }
    }
    
    class privateClassWithWithPublicGetAccessorTypes {
        static get myPublicStaticMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        private static get myPrivateStaticMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        get myPublicMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        private get myPrivateMethod(): publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        static get myPublicStaticMethod1() {
            return new publicClass();
        }
        private static get myPrivateStaticMethod1() {
            return new publicClass();
        }
        get myPublicMethod1() {
            return new publicClass();
        }
        private get myPrivateMethod1() {
            return new publicClass();
        }
    }
    
    export class publicClassWithWithPrivateSetAccessorTypes {
        static set myPublicStaticMethod(param: privateClass) { // Error
        }
        private static set myPrivateStaticMethod(param: privateClass) {
        }
        set myPublicMethod(param: privateClass) { // Error
        }
        private set myPrivateMethod(param: privateClass) {
        }
    }
    
    export class publicClassWithWithPublicSetAccessorTypes {
        static set myPublicStaticMethod(param: publicClass) {
        }
        private static set myPrivateStaticMethod(param: publicClass) {
        }
        set myPublicMethod(param: publicClass) {
        }
        private set myPrivateMethod(param: publicClass) {
        }
    }
    
    class privateClassWithWithPrivateSetAccessorTypes {
        static set myPublicStaticMethod(param: privateClass) {
        }
        private static set myPrivateStaticMethod(param: privateClass) {
        }
        set myPublicMethod(param: privateClass) { 
        }
        private set myPrivateMethod(param: privateClass) {
        }
    }
    
    class privateClassWithWithPublicSetAccessorTypes {
        static set myPublicStaticMethod(param: publicClass) {
        }
        private static set myPrivateStaticMethod(param: publicClass) {
        }
        set myPublicMethod(param: publicClass) {
        }
        private set myPrivateMethod(param: publicClass) {
        }
    }
    
    export class publicClassWithPrivateModuleGetAccessorTypes {
        static get myPublicStaticMethod(): privateModule.publicClass { // Error
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        get myPublicMethod(): privateModule.publicClass { // Error
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        static get myPublicStaticMethod1() { // Error
            return new privateModule.publicClass();
        }
        get myPublicMethod1() { // Error
            return new privateModule.publicClass();
        }
    }
    
    export class publicClassWithPrivateModuleSetAccessorTypes {
        static set myPublicStaticMethod(param: privateModule.publicClass) { // Error
        }
        set myPublicMethod(param: privateModule.publicClass) { // Error
        }
    }
    
    class privateClassWithPrivateModuleGetAccessorTypes {
        static get myPublicStaticMethod(): privateModule.publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        get myPublicMethod(): privateModule.publicClass {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
        }
        static get myPublicStaticMethod1() {
            return new privateModule.publicClass();
        }
        get myPublicMethod1() {
            return new privateModule.publicClass();
        }
    }
    
    class privateClassWithPrivateModuleSetAccessorTypes {
        static set myPublicStaticMethod(param: privateModule.publicClass) {
        }
        set myPublicMethod(param: privateModule.publicClass) {
        }
    }
    
    export namespace publicModule {
        class privateClass {
        }
    
        export class publicClass {
        }
        export class publicClassWithWithPrivateGetAccessorTypes {
            static get myPublicStaticMethod(): privateClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private static get myPrivateStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            get myPublicMethod(): privateClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private get myPrivateMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            static get myPublicStaticMethod1() { // Error
                return new privateClass();
            }
            private static get myPrivateStaticMethod1() {
                return new privateClass();
            }
            get myPublicMethod1() { // Error
                return new privateClass();
            }
            private get myPrivateMethod1() {
                return new privateClass();
            }
        }
    
        export class publicClassWithWithPublicGetAccessorTypes {
            static get myPublicStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private static get myPrivateStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private get myPrivateMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new publicClass();
            }
            private static get myPrivateStaticMethod1() {
                return new publicClass();
            }
            get myPublicMethod1() {
                return new publicClass();
            }
            private get myPrivateMethod1() {
                return new publicClass();
            }
        }
    
        class privateClassWithWithPrivateGetAccessorTypes {
            static get myPublicStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private static get myPrivateStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            get myPublicMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private get myPrivateMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            static get myPublicStaticMethod1() {
                return new privateClass();
            }
            private static get myPrivateStaticMethod1() {
                return new privateClass();
            }
            get myPublicMethod1() {
                return new privateClass();
            }
            private get myPrivateMethod1() {
                return new privateClass();
            }
        }
    
        class privateClassWithWithPublicGetAccessorTypes {
            static get myPublicStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private static get myPrivateStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private get myPrivateMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new publicClass();
            }
            private static get myPrivateStaticMethod1() {
                return new publicClass();
            }
            get myPublicMethod1() {
                return new publicClass();
            }
            private get myPrivateMethod1() {
                return new publicClass();
            }
        }
    
        export class publicClassWithWithPrivateSetAccessorTypes {
            static set myPublicStaticMethod(param: privateClass) { // Error
            }
            private static set myPrivateStaticMethod(param: privateClass) {
            }
            set myPublicMethod(param: privateClass) { // Error
            }
            private set myPrivateMethod(param: privateClass) {
            }
        }
    
        export class publicClassWithWithPublicSetAccessorTypes {
            static set myPublicStaticMethod(param: publicClass) {
            }
            private static set myPrivateStaticMethod(param: publicClass) {
            }
            set myPublicMethod(param: publicClass) {
            }
            private set myPrivateMethod(param: publicClass) {
            }
        }
    
        class privateClassWithWithPrivateSetAccessorTypes {
            static set myPublicStaticMethod(param: privateClass) {
            }
            private static set myPrivateStaticMethod(param: privateClass) {
            }
            set myPublicMethod(param: privateClass) {
            }
            private set myPrivateMethod(param: privateClass) {
            }
        }
    
        class privateClassWithWithPublicSetAccessorTypes {
            static set myPublicStaticMethod(param: publicClass) {
            }
            private static set myPrivateStaticMethod(param: publicClass) {
            }
            set myPublicMethod(param: publicClass) {
            }
            private set myPrivateMethod(param: publicClass) {
            }
        }
    
        export class publicClassWithPrivateModuleGetAccessorTypes {
            static get myPublicStaticMethod(): privateModule.publicClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): privateModule.publicClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() { // Error
                return new privateModule.publicClass();
            }
            get myPublicMethod1() { // Error
                return new privateModule.publicClass();
            }
        }
    
        export class publicClassWithPrivateModuleSetAccessorTypes {
            static set myPublicStaticMethod(param: privateModule.publicClass) { // Error
            }
            set myPublicMethod(param: privateModule.publicClass) { // Error
            }
        }
    
        class privateClassWithPrivateModuleGetAccessorTypes {
            static get myPublicStaticMethod(): privateModule.publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): privateModule.publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new privateModule.publicClass();
            }
            get myPublicMethod1() {
                return new privateModule.publicClass();
            }
        }
    
        class privateClassWithPrivateModuleSetAccessorTypes {
            static set myPublicStaticMethod(param: privateModule.publicClass) {
            }
            set myPublicMethod(param: privateModule.publicClass) {
            }
        }
    }
    
    namespace privateModule {
        class privateClass {
        }
    
        export class publicClass {
        }
        export class publicClassWithWithPrivateGetAccessorTypes {
            static get myPublicStaticMethod(): privateClass { 
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private static get myPrivateStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            get myPublicMethod(): privateClass { 
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private get myPrivateMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            static get myPublicStaticMethod1() { 
                return new privateClass();
            }
            private static get myPrivateStaticMethod1() {
                return new privateClass();
            }
            get myPublicMethod1() { 
                return new privateClass();
            }
            private get myPrivateMethod1() {
                return new privateClass();
            }
        }
    
        export class publicClassWithWithPublicGetAccessorTypes {
            static get myPublicStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private static get myPrivateStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private get myPrivateMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new publicClass();
            }
            private static get myPrivateStaticMethod1() {
                return new publicClass();
            }
            get myPublicMethod1() {
                return new publicClass();
            }
            private get myPrivateMethod1() {
                return new publicClass();
            }
        }
    
        class privateClassWithWithPrivateGetAccessorTypes {
            static get myPublicStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private static get myPrivateStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            get myPublicMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private get myPrivateMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            static get myPublicStaticMethod1() {
                return new privateClass();
            }
            private static get myPrivateStaticMethod1() {
                return new privateClass();
            }
            get myPublicMethod1() {
                return new privateClass();
            }
            private get myPrivateMethod1() {
                return new privateClass();
            }
        }
    
        class privateClassWithWithPublicGetAccessorTypes {
            static get myPublicStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private static get myPrivateStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private get myPrivateMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new publicClass();
            }
            private static get myPrivateStaticMethod1() {
                return new publicClass();
            }
            get myPublicMethod1() {
                return new publicClass();
            }
            private get myPrivateMethod1() {
                return new publicClass();
            }
        }
    
        export class publicClassWithWithPrivateSetAccessorTypes {
            static set myPublicStaticMethod(param: privateClass) { 
            }
            private static set myPrivateStaticMethod(param: privateClass) {
            }
            set myPublicMethod(param: privateClass) { 
            }
            private set myPrivateMethod(param: privateClass) {
            }
        }
    
        export class publicClassWithWithPublicSetAccessorTypes {
            static set myPublicStaticMethod(param: publicClass) {
            }
            private static set myPrivateStaticMethod(param: publicClass) {
            }
            set myPublicMethod(param: publicClass) {
            }
            private set myPrivateMethod(param: publicClass) {
            }
        }
    
        class privateClassWithWithPrivateSetAccessorTypes {
            static set myPublicStaticMethod(param: privateClass) {
            }
            private static set myPrivateStaticMethod(param: privateClass) {
            }
            set myPublicMethod(param: privateClass) {
            }
            private set myPrivateMethod(param: privateClass) {
            }
        }
    
        class privateClassWithWithPublicSetAccessorTypes {
            static set myPublicStaticMethod(param: publicClass) {
            }
            private static set myPrivateStaticMethod(param: publicClass) {
            }
            set myPublicMethod(param: publicClass) {
            }
            private set myPrivateMethod(param: publicClass) {
            }
        }
    
        export class publicClassWithPrivateModuleGetAccessorTypes {
            static get myPublicStaticMethod(): privateModule.publicClass { 
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): privateModule.publicClass { 
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() { 
                return new privateModule.publicClass();
            }
            get myPublicMethod1() { 
                return new privateModule.publicClass();
            }
        }
    
        export class publicClassWithPrivateModuleSetAccessorTypes {
            static set myPublicStaticMethod(param: privateModule.publicClass) { 
            }
            set myPublicMethod(param: privateModule.publicClass) { 
            }
        }
    
        class privateClassWithPrivateModuleGetAccessorTypes {
            static get myPublicStaticMethod(): privateModule.publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): privateModule.publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new privateModule.publicClass();
            }
            get myPublicMethod1() {
                return new privateModule.publicClass();
            }
        }
    
        class privateClassWithPrivateModuleSetAccessorTypes {
            static set myPublicStaticMethod(param: privateModule.publicClass) {
            }
            set myPublicMethod(param: privateModule.publicClass) {
            }
        }
    }
    
==== privacyAccessorDeclFile_GlobalFile.ts (44 errors) ====
    class publicClassInGlobal {
    }
    
    class publicClassInGlobalWithPublicGetAccessorTypes {
        static get myPublicStaticMethod(): publicClassInGlobal {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
        }
        private static get myPrivateStaticMethod(): publicClassInGlobal {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
        }
        get myPublicMethod(): publicClassInGlobal {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
        }
        private get myPrivateMethod(): publicClassInGlobal {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClassInGlobal'.
        }
        static get myPublicStaticMethod1() {
            return new publicClassInGlobal();
        }
        private static get myPrivateStaticMethod1() {
            return new publicClassInGlobal();
        }
        get myPublicMethod1() {
            return new publicClassInGlobal();
        }
        private get myPrivateMethod1() {
            return new publicClassInGlobal();
        }
    }
    
    class publicClassInGlobalWithWithPublicSetAccessorTypes {
        static set myPublicStaticMethod(param: publicClassInGlobal) {
        }
        private static set myPrivateStaticMethod(param: publicClassInGlobal) {
        }
        set myPublicMethod(param: publicClassInGlobal) {
        }
        private set myPrivateMethod(param: publicClassInGlobal) {
        }
    }
    
    namespace publicModuleInGlobal {
        class privateClass {
        }
    
        export class publicClass {
        }
    
        namespace privateModule {
            class privateClass {
            }
    
            export class publicClass {
            }
            export class publicClassWithWithPrivateGetAccessorTypes {
                static get myPublicStaticMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                private static get myPrivateStaticMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                get myPublicMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                private get myPrivateMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                static get myPublicStaticMethod1() {
                    return new privateClass();
                }
                private static get myPrivateStaticMethod1() {
                    return new privateClass();
                }
                get myPublicMethod1() {
                    return new privateClass();
                }
                private get myPrivateMethod1() {
                    return new privateClass();
                }
            }
    
            export class publicClassWithWithPublicGetAccessorTypes {
                static get myPublicStaticMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                private static get myPrivateStaticMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                get myPublicMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                private get myPrivateMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                static get myPublicStaticMethod1() {
                    return new publicClass();
                }
                private static get myPrivateStaticMethod1() {
                    return new publicClass();
                }
                get myPublicMethod1() {
                    return new publicClass();
                }
                private get myPrivateMethod1() {
                    return new publicClass();
                }
            }
    
            class privateClassWithWithPrivateGetAccessorTypes {
                static get myPublicStaticMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                private static get myPrivateStaticMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                get myPublicMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                private get myPrivateMethod(): privateClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
                }
                static get myPublicStaticMethod1() {
                    return new privateClass();
                }
                private static get myPrivateStaticMethod1() {
                    return new privateClass();
                }
                get myPublicMethod1() {
                    return new privateClass();
                }
                private get myPrivateMethod1() {
                    return new privateClass();
                }
            }
    
            class privateClassWithWithPublicGetAccessorTypes {
                static get myPublicStaticMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                private static get myPrivateStaticMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                get myPublicMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                private get myPrivateMethod(): publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                static get myPublicStaticMethod1() {
                    return new publicClass();
                }
                private static get myPrivateStaticMethod1() {
                    return new publicClass();
                }
                get myPublicMethod1() {
                    return new publicClass();
                }
                private get myPrivateMethod1() {
                    return new publicClass();
                }
            }
    
            export class publicClassWithWithPrivateSetAccessorTypes {
                static set myPublicStaticMethod(param: privateClass) {
                }
                private static set myPrivateStaticMethod(param: privateClass) {
                }
                set myPublicMethod(param: privateClass) {
                }
                private set myPrivateMethod(param: privateClass) {
                }
            }
    
            export class publicClassWithWithPublicSetAccessorTypes {
                static set myPublicStaticMethod(param: publicClass) {
                }
                private static set myPrivateStaticMethod(param: publicClass) {
                }
                set myPublicMethod(param: publicClass) {
                }
                private set myPrivateMethod(param: publicClass) {
                }
            }
    
            class privateClassWithWithPrivateSetAccessorTypes {
                static set myPublicStaticMethod(param: privateClass) {
                }
                private static set myPrivateStaticMethod(param: privateClass) {
                }
                set myPublicMethod(param: privateClass) {
                }
                private set myPrivateMethod(param: privateClass) {
                }
            }
    
            class privateClassWithWithPublicSetAccessorTypes {
                static set myPublicStaticMethod(param: publicClass) {
                }
                private static set myPrivateStaticMethod(param: publicClass) {
                }
                set myPublicMethod(param: publicClass) {
                }
                private set myPrivateMethod(param: publicClass) {
                }
            }
    
            export class publicClassWithPrivateModuleGetAccessorTypes {
                static get myPublicStaticMethod(): privateModule.publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                get myPublicMethod(): privateModule.publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                static get myPublicStaticMethod1() {
                    return new privateModule.publicClass();
                }
                get myPublicMethod1() {
                    return new privateModule.publicClass();
                }
            }
    
            export class publicClassWithPrivateModuleSetAccessorTypes {
                static set myPublicStaticMethod(param: privateModule.publicClass) {
                }
                set myPublicMethod(param: privateModule.publicClass) {
                }
            }
    
            class privateClassWithPrivateModuleGetAccessorTypes {
                static get myPublicStaticMethod(): privateModule.publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                get myPublicMethod(): privateModule.publicClass {
                    return null;
                    ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
                }
                static get myPublicStaticMethod1() {
                    return new privateModule.publicClass();
                }
                get myPublicMethod1() {
                    return new privateModule.publicClass();
                }
            }
    
            class privateClassWithPrivateModuleSetAccessorTypes {
                static set myPublicStaticMethod(param: privateModule.publicClass) {
                }
                set myPublicMethod(param: privateModule.publicClass) {
                }
            }
        }
    
        export class publicClassWithWithPrivateGetAccessorTypes {
            static get myPublicStaticMethod(): privateClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private static get myPrivateStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            get myPublicMethod(): privateClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private get myPrivateMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            static get myPublicStaticMethod1() { // Error
                return new privateClass();
            }
            private static get myPrivateStaticMethod1() {
                return new privateClass();
            }
            get myPublicMethod1() { // Error
                return new privateClass();
            }
            private get myPrivateMethod1() {
                return new privateClass();
            }
        }
    
        export class publicClassWithWithPublicGetAccessorTypes {
            static get myPublicStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private static get myPrivateStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private get myPrivateMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new publicClass();
            }
            private static get myPrivateStaticMethod1() {
                return new publicClass();
            }
            get myPublicMethod1() {
                return new publicClass();
            }
            private get myPrivateMethod1() {
                return new publicClass();
            }
        }
    
        class privateClassWithWithPrivateGetAccessorTypes {
            static get myPublicStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private static get myPrivateStaticMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            get myPublicMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            private get myPrivateMethod(): privateClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'privateClass'.
            }
            static get myPublicStaticMethod1() {
                return new privateClass();
            }
            private static get myPrivateStaticMethod1() {
                return new privateClass();
            }
            get myPublicMethod1() {
                return new privateClass();
            }
            private get myPrivateMethod1() {
                return new privateClass();
            }
        }
    
        class privateClassWithWithPublicGetAccessorTypes {
            static get myPublicStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private static get myPrivateStaticMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            private get myPrivateMethod(): publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new publicClass();
            }
            private static get myPrivateStaticMethod1() {
                return new publicClass();
            }
            get myPublicMethod1() {
                return new publicClass();
            }
            private get myPrivateMethod1() {
                return new publicClass();
            }
        }
    
        export class publicClassWithWithPrivateSetAccessorTypes {
            static set myPublicStaticMethod(param: privateClass) { // Error
            }
            private static set myPrivateStaticMethod(param: privateClass) {
            }
            set myPublicMethod(param: privateClass) { // Error
            }
            private set myPrivateMethod(param: privateClass) {
            }
        }
    
        export class publicClassWithWithPublicSetAccessorTypes {
            static set myPublicStaticMethod(param: publicClass) {
            }
            private static set myPrivateStaticMethod(param: publicClass) {
            }
            set myPublicMethod(param: publicClass) {
            }
            private set myPrivateMethod(param: publicClass) {
            }
        }
    
        class privateClassWithWithPrivateSetAccessorTypes {
            static set myPublicStaticMethod(param: privateClass) {
            }
            private static set myPrivateStaticMethod(param: privateClass) {
            }
            set myPublicMethod(param: privateClass) {
            }
            private set myPrivateMethod(param: privateClass) {
            }
        }
    
        class privateClassWithWithPublicSetAccessorTypes {
            static set myPublicStaticMethod(param: publicClass) {
            }
            private static set myPrivateStaticMethod(param: publicClass) {
            }
            set myPublicMethod(param: publicClass) {
            }
            private set myPrivateMethod(param: publicClass) {
            }
        }
    
        export class publicClassWithPrivateModuleGetAccessorTypes {
            static get myPublicStaticMethod(): privateModule.publicClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): privateModule.publicClass { // Error
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() { // Error
                return new privateModule.publicClass();
            }
            get myPublicMethod1() { // Error
                return new privateModule.publicClass();
            }
        }
    
        export class publicClassWithPrivateModuleSetAccessorTypes {
            static set myPublicStaticMethod(param: privateModule.publicClass) { // Error
            }
            set myPublicMethod(param: privateModule.publicClass) { // Error
            }
        }
    
        class privateClassWithPrivateModuleGetAccessorTypes {
            static get myPublicStaticMethod(): privateModule.publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            get myPublicMethod(): privateModule.publicClass {
                return null;
                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'publicClass'.
            }
            static get myPublicStaticMethod1() {
                return new privateModule.publicClass();
            }
            get myPublicMethod1() {
                return new privateModule.publicClass();
            }
        }
    
        class privateClassWithPrivateModuleSetAccessorTypes {
            static set myPublicStaticMethod(param: privateModule.publicClass) {
            }
            set myPublicMethod(param: privateModule.publicClass) {
            }
        }
    }